rust_writer_proc/tests/ui/parse_attrs_fails_if_macro_applied_to_tuple_struct.stderr
error: Expected unit struct or named-field struct.
 --> tests/ui/parse_attrs_fails_if_macro_applied_to_tuple_struct.rs:6:8
  |
6 | struct SomeStruct(u8);
  |        ^^^^^^^^^^
